tests/expectations/compiler/const_generics/const_generic_structs_fail.out
Error [ECMP0376012]: Unable to resolve composite expression `test.aleo::Foo`. A non-const expression was provided where a const generic parameter is required.
    --> compiler-test:7:23
     |
   7 |         let f = Foo::[x] { y: 0 };
     |                       ^
